add novigate panel and toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
-    <string name="app_name">AndroidLesson</string>
-    <string name="new_text">aaaaa</string>
+    <array name="screen_aray">
+
+    </array>
+
+    <string name="app_name">moneytracker</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="transactions">Траты</string>
+    <string name="categores">Категории</string>
+    <string name="statistics">Статистика</string>
+    <string name="warning">тут будет экран статистики</string>
 </resources>
