--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="transactions">Траты</string>
-    <string name="warning">тут будет статистика</string>
+    <string name="warning_null">Пустые поля</string>
+    <string name="warning_no_integer">В поле сумма не числовое значение</string>
+    <string name="statistics_text">тут будет статистика</string>
     <string name="categores">категории</string>
     <string name="statistics">статистика</string>
     <string name="add_transaction">Добавили трату</string>
+    <string name="add_text">ADD</string>
+    <string name="add_activity_title_name">Примечание</string>
+    <string name="add_activity_sum_name">Сумма</string>
 </resources>
