--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="cancel_button">CANCEL</string>
     <string name="hint_price_example">300</string>
     <string name="hint_title_example">ВОЙНА И МИР</string>
+    <string name="hint_category_exemple">МАГАЗИН</string>
+    <string name="warning_no_categories">ВНАЧАЛЕ СОЗДАЙТЕ КАТЕГОРИИ</string>
 </resources>
