add notisfaction service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="byn">BYN</string>
     <string name="to">C </string>
     <string name="from">На </string>
+    <string name="warning_no_cash">недостаточно средств</string>
 </resources>
