--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,6 @@
     <string name="drawer_item_help">Help</string>
     <string name="drawer_item_open_source">Open Source</string>
     <string name="drawer_item_contact">Contact</string>
+    <string name="drawer_item_persistent_compact_header">херня</string>
+    <string name="drawer_item_embedded_drawer">Embedded Drawer</string>
 </resources>
